# debts

./: .dockerignore  .env.db.example  .env.example  .gitignore  README.md  docker-compose.yml
debt_backend/: .dockerignore  .gitignore  Dockerfile  manage.py  pyproject.toml  redis_utils.py  requirements.txt
debt_backend/accounts/: admin.py  constants.py  errors.py  models.py  selectors.py  services.py  urls.py
debt_backend/accounts/api/: __init__.py  accounts.py  friend_requests.py  friends.py  tokens.py
debt_backend/accounts/migrations/: 0001_initial.py  0002_alter_account_friends.py
debt_backend/accounts/serializers/: __init__.py  accounts.py  friend_requests.py  tokens.py
debt_backend/debts/: admin.py  admin_utils.py  apps.py  constants.py  models.py  selectors.py  signals.py  urls.py
debt_backend/debts/api/: __init__.py  debt_requests.py  debts.py
debt_backend/debts/migrations/: 0001_initial.py  0002_auto_20211221_1813.py  0003_alter_debt_from_request.py  0004_alter_debt_from_request.py  0005_alter_debt_from_request.py  0006_closeddebtrequest_debt_closed_request.py
debt_backend/debts/serializers/: __init__.py  debt_requests.py  debts.py
debt_backend/debts/services/: __init__.py  closed_debt_requests.py  debt_requests.py
debt_backend/debtsBack/: asgi.py  settings.py  urls.py  wsgi.py
debt_backend/docker/: entrypoint.sh
debt_backend/notifications/: api.py  constants.py  models.py  selectors.py  services.py  urls.py
debt_backend/tests/: base.py  factories.py  test_accounts.py  test_debts.py  test_friends.py
nginx/: nginx.conf
(+16 files in other folders)
